Fix pom.xml developer name typo.

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
   <developers>
     <developer>
       <id>ahawker</id>
-      <name>Andrew Hawker</id>
+      <name>Andrew Hawker</name>
       <email>ahawker@amazon.com</email>
     </developer>
   </developers>
