--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.509.2</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>2.2</version>
   </parent>
 
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>aws-device-farm</artifactId>
-  <version>1.11-SNAPSHOT</version>
+  <version>1.14</version>
   <packaging>hpi</packaging>
   
   <name>aws-device-farm</name>
@@ -20,6 +20,11 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
       <version>1.10.59</version>
+    </dependency>
+    <dependency><!-- Required when testing against core > 1.575 -->
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>junit</artifactId>
+      <version>1.13</version>
     </dependency>
   </dependencies>
 
