--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.6</version>
+    <version>3.7</version>
   </parent>
 
   <groupId>org.jenkins-ci.plugins</groupId>
@@ -17,21 +17,21 @@
 
   <properties>
     <jenkins.version>1.625.3</jenkins.version>
-    <java.level>7</java.level>
+    <java.level>8</java.level>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>junit</artifactId>
-      <version>1.24</version>
+      <version>1.28</version>
     </dependency>
 
     <!-- TODO: use AWS SDK Plugin instead: https://plugins.jenkins.io/aws-java-sdk -->
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
-      <version>1.12.407</version>
+      <version>1.12.395</version>
       <exclusions>
         <exclusion>
           <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -51,10 +51,16 @@
         <version>4.4.13</version>
     </dependency>
 
-  <dependency>
+    <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
         <version>1.15</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>scm-api</artifactId>
+      <version>2.2.6</version>
     </dependency>
   </dependencies>
 
@@ -84,6 +90,11 @@
       <id>nikdabn</id>
       <name>Nikhil Dabhade</name>
       <email>nikdabn@amazon.com</email>
+    </developer>
+    <developer>
+      <id>wrydane</id>
+      <name>Dane Wrye</name>
+      <email>wrydane@amazon.com</email>
     </developer>
   </developers>
 
